# my_rust_bot

./: Cargo.toml
src/: bot.rs  bot_logic.rs  convert_currencyes.rs  main.rs  parse_site.rs  parse_xml.rs  sqllite.rs  xml_text.xml
