[package]
name = "my_rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
xml-rs = "0.8"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
scraper = "0.15"
anyhow = "1.0"